[package]
name = "Rust-mongodb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "2.3.0"
bson = { version = "2.4.0", features = ["chrono-0_4"] } # Needed for using chrono datetime in doc
tokio = "1.23.0"
chrono = "0.4.23"
serde = "1.0.149"
reqwest = "0.11.13"
serde-xml-rs = "0.6.0"
# [patch.crates-io]

# quick-xml = {path = "../quick-xml"}